FrontEnd/Modules/Base/Css/kendo.custom.css
/* ... */
.k-grid .k-header .k-button,
.k-scheduler .k-header .k-button,
.k-scheduler .k-header li,
.k-scheduler .k-header .k-link,
.k-gantt > .k-header li,
.k-gantt > .k-header .k-link,
.k-gantt-toolbar .k-button,
.km-pane-wrapper .k-header .k-button {
    color: var(--white-color);
    background-color: var(--primary-color);
    border-color: var(--primary-color);
    box-shadow: none;
}

.k-grid .k-header .k-button:hover,
.k-scheduler .k-header .k-button:hover,
.k-scheduler .k-scheduler-toolbar .k-scheduler-views li.k-state-hover,
.k-scheduler .k-scheduler-toolbar .k-scheduler-views li.k-state-hover .k-link,
.k-gantt .k-gantt-toolbar .k-gantt-views li.k-state-hover,
.k-gantt .k-gantt-toolbar .k-gantt-views li.k-state-hover .k-link,
.k-gantt .k-gantt-toolbar .k-button:hover,
.km-pane-wrapper .k-header .k-button:hover {
    background-color: var(--primary-hover);
    border-color: var(--primary-hover);
}

.km-pane-wrapper .k-header .k-button:active:hover {
    color: var(--white-color);
}

.k-scheduler .k-scheduler-toolbar ul li.k-state-hover,
.k-scheduler .k-scheduler-toolbar .k-state-selected,
.k-gantt-toolbar .k-button {
    background-color: var(--color-1);
    border-color: var(--color-1);
}

.k-gantt .k-gantt-toolbar .k-button:active {
    background: var(--white-color);
    box-shadow: none;
}

.k-gantt-toolbar > .k-gantt-views > li.k-state-selected,
.k-gantt .k-gantt-toolbar .k-gantt-views li.k-state-selected.k-state-hover,
.k-scheduler .k-scheduler-toolbar .k-scheduler-views li.k-state-selected.k-state-hover,
.k-scheduler-toolbar > .k-scheduler-views > li.k-state-selected {
    border-bottom-color: var(--color-2);
}

.k-scheduler-mark {
    border-radius: 50%;
}

.k-grid .k-alt {
    background-color: var(--lightest-color);
}

.k-grouping-row td,
td.k-group-cell,
.k-resize-handle-inner,
.k-grid .k-state-selected:hover .k-group-cell {
    color: var(--dark-txt);
    background-color: var(--light-color);
}

.k-grouping-header .k-group-indicator,
.k-pivot-toolbar .k-button {
    color: var(--white-color);
    background-color: #008bbd;
    border-color: #008bbd;
    box-shadow: none;
}

.k-grid-header,
.k-grid-header .k-header,
.k-pager-wrap,
.k-pager-numbers .k-state-selected,
.k-grid-footer,
.k-grid-footer td,
.km-pane-wrapper .k-grid-header .k-header {
    color: var(--dark-txt);
    background-color: var(--lightest-color);
}

.k-header.k-scheduler-footer .k-header,
.k-header.k-scheduler-footer ul.k-header li .k-link {
    color: var(--color-2);
    background-color: var(--lightest-color);
}

.k-header.k-scheduler-footer ul.k-header li {
    background-color: var(--lightest-color);
    border-color: var(--lightest-color);
}

.k-header,
.k-grid-header-wrap,
.k-grid .k-grouping-header,
.k-grid-header,
.k-pager-wrap,
.k-pager-wrap .k-textbox,
.k-pager-wrap .k-link,
.k-gantt-toolbar .k-state-default,
.k-grouping-row td,
.k-group-footer td,
.k-grid-footer td {
    border-color: var(--sec-color);
}

.k-group-footer td,
.k-footer-template td,
.k-fieldselector .k-item.k-header {
    color: var(--dark-txt);
    background-color: var(--light-color);
}

.k-grid .k-grouping-header {
    color: rgba(255, 255, 255, 0.5);
}

.k-pager-wrap {
    color: var(--dark-txt);
}

.k-grouping-header .k-link,
.k-grouping-header .k-link:link {
    color: var(--white-color);
}

.k-scheduler-layout .k-selected,
.k-scheduler .k-today.k-selected,
.k-grid tr.k-selected,
.k-grid td.k-selected,
.k-grid td.k-selected.k-state-focused,
.k-grid td.k-selected,
.k-grid .k-table-row.k-selected > td,
.k-grid .k-table-td.k-selected,
.k-grid .k-table-row.k-selected > .k-table-td,
.k-marquee-color,
.k-gantt .k-treelist .k-state-selected,
.k-gantt .k-treelist .k-state-selected td,
.k-gantt .k-treelist .k-alt.k-state-selected,
.k-gantt .k-treelist .k-alt.k-state-selected > td,
.k-listview > .k-state-selected,
.k-state-selected.k-line {
    background-color: var(--row-selected-background-color);
}

.k-state-selected.k-line {
    color: var(--row-selected-background-color);
}

.k-grid tr.k-selected,
.k-grid td.k-selected,
.k-listview > .k-selected,
.k-selected .k-progress-status {
    color: var(--black-color);
}

.k-grid tr:hover {
    background-color: var(--light-color);
}

.k-grid .k-filter-row:hover,
.k-pivot-rowheaders .k-grid tr:hover {
    background: none;
}

.k-grid td.k-selected:hover,
.k-grid tr.k-selected:hover td {
    background-color: var(--row-selected-hover-background-color);
}

.k-grid-header .k-header .k-link,
.k-grid-header .k-header,
.k-grid-header .k-link,
.k-grid-header .k-link:link,
.k-pager-info,
.k-scheduler-header,
.k-scheduler-agendaview .k-scheduler-datecolumn {
    color: var(--lighter-txt);
}

.k-gantt .k-task-draghandle {
    border-color: var(--color-2);
}

.k-grid-pager .k-link,
.k-grid-pager .k-link:link {
    color: var(--dark-txt);
}

.k-pager-numbers .k-link,
.k-pager-wrap > .k-link {
    border-radius: 0;
}

.k-pager-wrap .k-pager-numbers .k-state-selected {
    border-color: var(--color-1) transparent transparent;
    border-radius: 0;
    box-shadow: none;
    color: var(--color-1);
}

.k-pager-wrap .k-link {
    border-color: var(--lightest-color);
    cursor: pointer;
}

.k-pager-wrap .k-link:hover {
    background-color: transparent;
    border-color: transparent;
}

.k-scheduler-toolbar > ul li:first-child,
.k-scheduler-toolbar > ul li:first-child .k-link,
.k-scheduler-toolbar .k-nav-next,
.k-scheduler-toolbar ul + ul li:last-child,
.k-scheduler-toolbar .k-nav-next .k-link,
.k-scheduler-toolbar ul + ul li:last-child .k-link,
.k-gantt-toolbar li:first-child,
.k-gantt-toolbar li:first-child > .k-link,
.k-gantt-toolbar li:last-child,
.k-gantt-toolbar li:last-child > .k-link {
    border-radius: 0;
}
/* ... */

